; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-ntlmssp.c_ntlmssp_decode_init.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-ntlmssp.c_ntlmssp_decode_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.NtlmsspDecode = type { i32, i32*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ntlmssp_decode_init(%struct.NtlmsspDecode* %0, i64 %1) #0 {
  %3 = alloca %struct.NtlmsspDecode*, align 8
  %4 = alloca i64, align 8
  store %struct.NtlmsspDecode* %0, %struct.NtlmsspDecode** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.NtlmsspDecode*, %struct.NtlmsspDecode** %3, align 8
  %6 = call i32 @memset(%struct.NtlmsspDecode* %5, i32 0, i32 24)
  %7 = load i64, i64* %4, align 8
  %8 = icmp ugt i64 %7, 65536
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i64 65536, i64* %4, align 8
  br label %10

10:                                               ; preds = %9, %2
  %11 = load i64, i64* %4, align 8
  %12 = trunc i64 %11 to i32
  %13 = load %struct.NtlmsspDecode*, %struct.NtlmsspDecode** %3, align 8
  %14 = getelementptr inbounds %struct.NtlmsspDecode, %struct.NtlmsspDecode* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 8
  %15 = load %struct.NtlmsspDecode*, %struct.NtlmsspDecode** %3, align 8
  %16 = getelementptr inbounds %struct.NtlmsspDecode, %struct.NtlmsspDecode* %15, i32 0, i32 2
  store i64 0, i64* %16, align 8
  %17 = load %struct.NtlmsspDecode*, %struct.NtlmsspDecode** %3, align 8
  %18 = getelementptr inbounds %struct.NtlmsspDecode, %struct.NtlmsspDecode* %17, i32 0, i32 1
  store i32* null, i32** %18, align 8
  ret void
}

declare dso_local i32 @memset(%struct.NtlmsspDecode*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
